1) increased write buf size; 2) written results of experiments; changed messages of read/write tools.